--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
 sourceCompatibility = 1.11
 targetCompatibility = 1.11
 
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
 group = 'io.github.millij'
 version = '3.0.0-SNAPSHOT'
 
